# goose

./: 404.html  Cargo.toml  goose-docs-map.md  index.html  skills-manifest.json
.github/workflows/: build-native-packages.yml
assets/js/: 0a45c249.afa906e7.js  814f3328.92bdbcfe.js  main.4202938e.js  runtime~main.ba171c43.js
blog/: index.html
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
blog/authors/adewale/: index.html
blog/authors/aharvard/: index.html
blog/authors/alex/: index.html
blog/authors/alexhancock/: index.html
blog/authors/alice/: index.html
blog/authors/amanda/: index.html
blog/authors/angie/: index.html
blog/authors/clinton/: index.html
blog/authors/dalton/: index.html
blog/authors/damien/: index.html
blog/authors/dean/: index.html
blog/authors/debbie/: index.html
blog/authors/ebony/: index.html
blog/authors/glenn/: index.html
blog/authors/harrison/: index.html
blog/authors/ian/: index.html
blog/authors/jeuston/: index.html
blog/authors/matt/: index.html
blog/authors/mic/: index.html
blog/authors/rarora/: index.html
blog/authors/rizel/: index.html
blog/authors/tania/: index.html
blog/authors/tomasz/: index.html
blog/authors/tyler/: index.html
blog/page/10/: index.html
blog/page/2/: index.html
blog/page/3/: index.html
blog/page/4/: index.html
blog/page/5/: index.html
blog/page/6/: index.html
blog/page/7/: index.html
blog/page/8/: index.html
blog/page/9/: index.html
community/: index.html
community/data/README/: index.html
crates/goose/: Cargo.toml
crates/goose-acp/: acp-schema.json
crates/spawnbot-common/: Cargo.toml
crates/spawnbot-common/src/: changes_log.rs  config.rs  lib.rs  paths.rs  types.rs
crates/spawnbot-daemon/: Cargo.toml
crates/spawnbot-daemon/src/: acp.rs  approval.rs  commands.rs  consumer.rs  error_log.rs  inbox.rs  lib.rs  main.rs  queue.rs  session.rs
crates/spawnbot-daemon/src/autonomy/: cron.rs  heartbeat.rs  idle.rs  mod.rs  poller.rs  prompts.rs
crates/spawnbot-daemon/src/telegram/: access.rs  bot.rs  messages.rs  mod.rs  whisper.rs
crates/spawnbot-identity/: Cargo.toml
crates/spawnbot-identity/src/: documents.rs  heartbeat.rs  lib.rs  main.rs  server.rs
crates/spawnbot-memory/: Cargo.toml
crates/spawnbot-memory/src/: browse.rs  db.rs  decay.rs  dedup.rs  delete.rs  embeddings.rs  indexer.rs  lib.rs  main.rs  recall.rs  server.rs  store.rs
crates/spawnbot-onboarding/: Cargo.toml
crates/spawnbot-onboarding/src/: autostart.rs  configure.rs  lib.rs  scaffold.rs  templates.rs  wizard.rs
crates/spawnbot-skills/: Cargo.toml
crates/spawnbot-skills/src/: extensions.rs  lib.rs  main.rs  server.rs  skills.rs
deeplink-generator/: index.html
docs/category/architecture-overview/: index.html
docs/category/getting-started/: index.html
docs/category/guides/: index.html
docs/category/mcp-servers/: index.html
docs/category/tutorials/: index.html
docs/experimental/: index.html
docs/experimental/goose-mobile/: index.html
docs/experimental/mobile-access/: index.html
docs/experimental/ollama/: index.html
docs/experimental/remote-access/: index.html
docs/experimental/vs-code-extension/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/providers/: index.html
docs/getting-started/using-extensions/: index.html
docs/goose-architecture/: index.html
docs/goose-architecture/error-handling/: index.html
docs/goose-architecture/extensions-design/: index.html
docs/guides/acp-clients/: index.html
docs/quickstart/: index.html
docs/troubleshooting/: index.html
extension/: index.html
extensions/: index.html
extensions/detail/: index.html
grants/: index.html
markdown-page/: index.html
npm/: README.md
prompt-library/: index.html
prompt-library/detail/: index.html
prompt-library/types/: index.html
recipe-generator/: index.html
recipes/: index.html
recipes/detail/: index.html
recipes/types/: index.html
skills/: index.html
skills/detail/: index.html
skills/types/: index.html
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/acp/: generate-schema.ts
ui/desktop/: forge.config.ts  forge.deb.desktop  forge.rpm.desktop  index.html  package.json  pnpm-lock.yaml
ui/text/: package-lock.json  package.json
(+273 files in other folders)
