[package]
name = "spawnbot-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spawnbot"
path = "src/main.rs"

[dependencies]
spawnbot-common = { path = "../spawnbot-common" }
spawnbot-identity = { path = "../spawnbot-identity" }
spawnbot-onboarding = { path = "../spawnbot-onboarding" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio-cron-scheduler = "0.15"
feed-rs = "2"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
ulid = "1"

[dev-dependencies]
tempfile = "3"
