[package]
name = "spawnbot-onboarding"
version = "0.1.0"
edition = "2021"

[dependencies]
spawnbot-common = { path = "../spawnbot-common" }
spawnbot-memory = { path = "../spawnbot-memory" }
anyhow = "1.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.15"

[dev-dependencies]
tempfile = "3"
