[package]
name = "spawnbot-skills"
version = "0.2.0"
edition = "2021"
[[bin]]
name = "spawnbot-skills"
path = "src/main.rs"
[dependencies]
spawnbot-common = { path = "../spawnbot-common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
schemars = "1"
[dev-dependencies]
tempfile = "3"
